-- TABLE RDV
CREATE TABLE rdv (
    id BIGINT PRIMARY KEY AUTO_INCREMENT,
    nom VARCHAR(100) NOT NULL,
    date DATE NOT NULL,
    heure TIME NOT NULL,
    jeu VARCHAR(100) NOT NULL,
    statut VARCHAR(50) NOT NULL, -- Ex : OUVERT, FERME, ANNULE
    slots INT NOT NULL,
    organisateur_id BIGINT NOT NULL
);

-- TABLE PARTICIPANT
CREATE TABLE participant (
    id BIGINT PRIMARY KEY AUTO_INCREMENT,
    user_id BIGINT NOT NULL,
    rdv_id BIGINT NOT NULL,
    role VARCHAR(50) NOT NULL, -- Ex : JOUEUR, REMPLAÇANT
    statut_participation VARCHAR(50) NOT NULL, -- Ex : CONFIRME, EN_ATTENTE, REFUSE
    FOREIGN KEY (rdv_id) REFERENCES rdv(id) ON DELETE CASCADE
);
